# rve

./: Cargo.toml  model.yaml  requirements.txt
activate/: Cargo.toml
activate/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
example/: grpc_server.py  requirements.txt  service_pb2.py
examples/: model.yaml
examples/model-1/: grpc_server.py  service_pb2_grpc.py
examples/model-2/: grpc_server.py  requirements.txt
proxy/: Cargo.toml
proxy/proto/: service.proto
proxy/src/: main.rs
src/: main.rs
