[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
venv = { path = "../venv" }
activate = { path = "../activate" }

actix-web = "4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
prost = "0.13"
tonic = "0.13"
tokio = {version = "1", features = ["full"]}
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.13"
